test/errors/type/str/count1.yasl
mt.lookup('', .count)(1, true)
